--- a/templates/index.html
+++ b/templates/index.html
@@ -5,11 +5,33 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>主程式</title>
+  <style type="text/css">
+    * {
+      margin: 0;
+    }
+
+    .map {
+      margin: 100px auto;
+      height: 600px;
+      width: 900px;
+      background: #00D0FF;
+      border: 10px solid #AFAEB2;
+      border-radius: 8px;
+    }
+  </style>
+
+
 </head>
 
 <body>
-  <div>這是之後snack呈現的地方</div>
-  <canvas id="paint" width="300" height="300" style="color: black;"></canvas>
+  <div class="map">
+    <canvas id="canvas" height="600" width="900">
+
+    </canvas>
+  </div>
+  <script src="{{ url_for('static', filename = '/js/snake.js') }}">
+  </script>
+
 </body>
 
 </html>
