--- a/templates/index.html
+++ b/templates/index.html
@@ -24,16 +24,17 @@
 </head>
 
 <body>
-  <div class="map">
+  <!-- <div class="map">
     <canvas id="canvas" height="600" width="900">
 
     </canvas>
 
-  </div>
+  </div> -->
+  <canvas id="canvas" width="400" height="400" style="border:1px solid #d3d3d3;"></canvas>
 
   <div>Score:<span id="Score">0</span></div>
 
-  <script src="{{ url_for('static', filename = '/js/paint.js') }}">
+  <script src="{{ url_for('static', filename = '/js/practice.js') }}">
   </script>
 
 </body>
