update nogoback fnc

--- a/templates/index.html
+++ b/templates/index.html
@@ -32,7 +32,7 @@
   </div> -->
   <canvas id="canvas" width="400" height="400" style="border:1px solid #d3d3d3;"></canvas>
 
-  <div>Score:<span id="Score">0</span></div>
+  <!-- <div>Score:<span id="Score">0</span></div> -->
 
   <script src="{{ url_for('static', filename = '/js/practice.js') }}">
   </script>
